--- a/kc-frontend/ngo-dashboard/view_donations.html
+++ b/kc-frontend/ngo-dashboard/view_donations.html
@@ -13,10 +13,10 @@
     <nav>
       <ul>
         <li><a href="#" class="logo">
-          <img src="logo.jpg" alt="Logo" />
+          <img src="/logo.jpg" alt="Logo" />
           <span class="nav-item">NGO Dashboard</span>
         </a></li>
-        <li><a href="view_donations.html" class="active">
+        <li><a href="view_donations.html">
           <i class="fas fa-box-open"></i>
           <span class="nav-item">View Donations</span>
         </a></li>
@@ -28,11 +28,7 @@
           <i class="fas fa-history"></i>
           <span class="nav-item">Past Donations</span>
         </a></li>
-        <li><a href="settings.html">
-          <i class="fas fa-cog"></i>
-          <span class="nav-item">Settings</span>
-        </a></li>
-        <li><a href="logout.html" class="logout">
+        <li><a href="/kc-frontend/logout.html" class="logout">
           <i class="fas fa-sign-out-alt"></i>
           <span class="nav-item">Log out</span>
         </a></li>
