--- a/kc-frontend/home.html
+++ b/kc-frontend/home.html
@@ -10,15 +10,14 @@
     <!-- Navigation Bar -->
     <header>
         <nav>
-            <!-- Left side of the navbar -->
             <div class="nav-left">
-                <a href="index.html" class="home-btn">Home</a>
             </div>
 
             <!-- Right side of the navbar -->
             <div class="nav-right">
-                <a href="faq.html" class="faq-btn">FAQ</a>
-                <button class="settings-btn" id="settingsButton">Settings</button>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="faq.html" class="faq-btn">FAQs</a>
             </div>
         </nav>
     </header>
@@ -26,8 +25,8 @@
     <!-- Main Section: Welcome -->
     <section class="home-section">
         <div class="welcome-container">
-            <h1>Welcome to Kind Crumbs</h1>
-            <p>Helping hotels donate excess food to NGOs and reduce waste.</p>
+            <h1>Welcome to KindCrumbs</h1>
+            <p>Helping Restaurants donate excess food to NGOs and reduce waste.</p>
         </div>
     </section>
 
@@ -61,7 +60,7 @@
         <h2>Join Us</h2>
         <p>Whether you’re a hotel with surplus food or an NGO looking to help, we invite you to join our mission and make a difference.</p>
         <div class="home-buttons">
-            <a href="signup.html" class="btn">Sign Up Here</a>
+            <a href="signup.html" class="btn">Sign Up</a>
             <a href="login.html" class="btn">Login</a>
         </div>
     </section>
@@ -71,9 +70,7 @@
         <div class="footer-container">
             <p>&copy; 2024 Kind Crumbs. All Rights Reserved.</p>
             <div class="footer-links">
-                <a href="contact.html">Contact Us</a>
-                <a href="faq.html">FAQ</a>
-                <a href="ngo-list.html">NGOs Listed</a>
+                <a href="terms.html">Terms & Condition || Privacy Policy</a>
             </div>
         </div>
     </footer>
