--- a/kc-frontend/ngo-dashboard/past_donations.html
+++ b/kc-frontend/ngo-dashboard/past_donations.html
@@ -5,33 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Past Donations</title>
     <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 <body>
     <div class="container">
         <nav>
-            <ul>
-                <li><a href="view_donations.html">
-                  <i class="fas fa-box-open"></i>
-                  <span class="nav-item">View Donations</span>
-                </a></li>
-                <li><a href="claim_donations.html">
-                  <i class="fas fa-hand-holding"></i>
-                  <span class="nav-item">Claim Donations</span>
-                </a></li>
-                <li><a href="#" class="active">
-                  <i class="fas fa-history"></i>
-                  <span class="nav-item">Past Donations</span>
-                </a></li>
-                <li><a href="settings.html">
-                    <i class="fas fa-cog"></i>
-                    <span class="nav-item">Settings</span>
-                </a></li>
-                <li><a href="logout.html" class="logout">
-                  <i class="fas fa-sign-out-alt"></i>
-                  <span class="nav-item">Log out</span>
-                </a></li>
-            </ul>
+          <ul>
+            <li><a href="#" class="logo">
+              <img src="/logo.jpg" alt="Logo" />
+              <span class="nav-item">NGO Dashboard</span>
+            </a></li>
+            <li><a href="view_donations.html">
+              <i class="fas fa-box-open"></i>
+              <span class="nav-item">View Donations</span>
+            </a></li>
+            <li><a href="claim_donations.html">
+              <i class="fas fa-hand-holding"></i>
+              <span class="nav-item">Claim Donations</span>
+            </a></li>
+            <li><a href="past_donations.html">
+              <i class="fas fa-history"></i>
+              <span class="nav-item">Past Donations</span>
+            </a></li>
+            <li><a href="/kc-frontend/logout.html" class="logout">
+              <i class="fas fa-sign-out-alt"></i>
+              <span class="nav-item">Log out</span>
+            </a></li>
+          </ul>
         </nav>
+    
 
         <section class="main">
             <div class="main-top">
