--- a/kc-frontend/ngo.html
+++ b/kc-frontend/ngo.html
@@ -28,11 +28,7 @@
           <i class="fas fa-history"></i>
           <span class="nav-item">Past Donations</span>
         </a></li>
-        <li><a href="ngo-dashboard/settings.html">
-          <i class="fas fa-cog"></i>
-          <span class="nav-item">Settings</span>
-        </a></li>
-        <li><a href="ngo-dashboard/logout.html" class="logout">
+        <li><a href="logout.html" class="logout">
           <i class="fas fa-sign-out-alt"></i>
           <span class="nav-item">Log out</span>
         </a></li>
