--- a/kc-frontend/restaurant-dashboard/cancel_donations.html
+++ b/kc-frontend/restaurant-dashboard/cancel_donations.html
@@ -29,11 +29,7 @@
             <i class="fas fa-times-circle"></i>
             <span class="nav-item">Cancel Donation</span>
         </a>
-        <a href="settings.html">
-            <i class="fas fa-cog"></i>
-            <span class="nav-item">Settings</span>
-        </a>
-        <a href="logout.html" class="logout">
+        <a href="/kc-frontend/logout.html" class="logout">
             <i class="fas fa-sign-out-alt"></i>
             <span class="nav-item">Log out</span>
         </a>
